--- a/public/lang/pl.json
+++ b/public/lang/pl.json
@@ -1,6 +1,7 @@
 {
     "notifications": "powiadomienia",
     "Login": "Zaloguj się",
+    "Register": "Zarejestruj się",
     "Upload Files": "Prześlij pliki",
     "View Your Mails": "Zobacz swoje maile",
     "View Public Mails": "Zobacz publiczne maile",
