--- a/public/lang/pl.json
+++ b/public/lang/pl.json
@@ -1,31 +1,30 @@
 {
     "notifications": "powiadomienia",
     "Login": "Zaloguj się",
-    "Register": "Zarejestruj się",
     "Upload Files": "Prześlij pliki",
     "View Your Mails": "Zobacz swoje maile",
     "View Public Mails": "Zobacz publiczne maile",
     "Logout": "Wyloguj się",
-    "Name": "Nazwa",
+    "Name": "Nazwa Użytkownika",
     "Password": "Hasło",
     "File Upload": "Przesyłanie plików",
     "Subject": "Temat",
     "Content": "Zawartość",
     "Files": "Pliki",
-    "Send Mail": "Wyślij mail",
+    "Send Mail": "Wyślij maila",
     "Enter the name": "Wprowadź nazwę",
     "Enter the password": "Wprowadź hasło",
-    "Logout successful": "Wylogowanie zakończone sukcesem",
+    "Logout successful": "Wylogowanie zakończone pomyślnie",
     "Mail directory already exists": "Katalog maili już istnieje",
-    "File uploaded successfully": "Plik przesłany pomyślnie",
+    "File uploaded successfully": "Plik został pomyślnie przesłany",
     "Enter mail name": "Wprowadź nazwę maila",
     "Enter mail content": "Wprowadź treść maila",
-    "Click to reveal": "kliknij, aby odsłonić",
+    "Click to reveal": "kliknij, aby wyświetlić",
     "Mails": "Maile",
     "Your": "Twoje",
     "View Files": "Zobacz pliki",
     "Public Mails": "Publiczne maile",
-    "No mails found": "Nie znaleziono maili",
+    "No mails found": "Nie znaleziono żadnych maili",
     "Public": "Publiczne",
     "Are you sure you want to logout": "Czy na pewno chcesz się wylogować",
     "Are you sure you want to upload an empty file": "Czy na pewno chcesz przesłać pusty plik",
@@ -41,5 +40,12 @@
     "Invalid credentials": "Nieprawidłowy login lub hasło",
     "Users Mails": "Maile użytkowników",
     "New Mails": "Nowe maile",
-    "Search": "Szukaj"
+    "Search": "Szukaj",
+    "Please enter a mail name": "Proszę wprowadzić maila",
+    "Up to date": "Wersja Aktualna",
+    "Update available": "Dostępna aktualizacja",
+    "Checking Error": "Błąd sprawdzania",
+    "Connection error": "Błąd połączenia",
+    "Could not retrieve git information": "Nie można pobrać informacji z git'a",
+    "Please start server again": "Proszę zresetować serwer"
 }
