--- a/public/lang/th.json
+++ b/public/lang/th.json
@@ -47,5 +47,10 @@
     "Checking Error": "เกิดข้อผิดพลาดในการตรวจสอบ",
     "Connection error": "ข้อผิดพลาดในการเชื่อมต่อ",
     "Could not retrieve git information": "ไม่สามารถดึงข้อมูลจาก git ได้",
-    "Please start server again": "กรุณารีสตาร์ทเซิร์ฟเวอร์อีกครั้ง"
+    "Please start server again": "กรุณารีสตาร์ทเซิร์ฟเวอร์อีกครั้ง",
+    "Browse": "เรียกดู",
+    "No files selected": "ไม่ได้เลือกไฟล์",
+    "Version Status": "สถานะเวอร์ชัน",
+    "Updating": "กำลังอัปเดต...",
+    "Client latest update": "อัปเดตล่าสุดของไคลเอนต์"
 }
