--- a/public/lang/zh.json
+++ b/public/lang/zh.json
@@ -47,5 +47,10 @@
     "Checking Error": "检查错误",
     "Connection error": "连接错误",
     "Could not retrieve git information": "无法获取 git 信息",
-    "Please start server again": "请重新启动服务器"
+    "Please start server again": "请重新启动服务器",
+    "Browse": "浏览",
+    "No files selected": "未选择文件",
+    "Version Status": "版本状态",
+    "Updating": "正在更新...",
+    "Client latest update": "客户端最新更新"
 }
